<resources>
    <string name="app_name">Mono</string>
    <string name="good_aftern"> Good afternoon,</string>
    <string name="enjelin_mor">Enjelin Morgeana</string>
    <string name="total_balan">Total Balance</string>
    <string name="some_id">$ 2,548.00</string>
    <string name="income">Income</string>
    <string name="income_value">$ 1,840.00</string>
    <string name="expenses">Expenses</string>
    <string name="expenses_value">$ 284.00</string>

</resources>