<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/rectangle_9"
                android:layout_width="414dp"
                android:layout_height="287dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/rectangle_9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bell"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/rectangle_9">

            </ImageView>

            <TextView
                android:id="@+id/good_aftern"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:gravity="top"
                android:text="@string/good_aftern"
                android:textAppearance="@style/good_aftern"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/enjelin_mor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:gravity="top"
                android:textFontWeight="500"
                android:text="@string/enjelin_mor"
                android:textAppearance="@style/enjelin_mor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/good_aftern" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ractangle_card"
                android:elevation="10dp"
                android:gravity="center"

                android:orientation="vertical"
                android:padding="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enjelin_mor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/total_balan"
                        android:layout_width="101dp"
                        android:layout_height="19dp"
                        android:gravity="top"
                        android:text="@string/total_balan"
                        android:textAppearance="@style/total_balan"
                        android:textFontWeight="500" />

                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_marginTop="4dp"
                        android:rotation="90"
                        android:src="@drawable/ic_baseline_chevron_left_24" />

                </LinearLayout>

                <TextView
                    android:id="@+id/some_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    android:gravity="top"
                    android:text="@string/some_id"
                    android:textAppearance="@style/some_id"
                    android:textFontWeight="700" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="left">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/down_arrow"/>

                            <TextView
                                android:id="@+id/income"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/income"
                                android:textAppearance="@style/income"
                                android:gravity="top"
                                android:textFontWeight="600"
                                android:layout_marginLeft="5dp"
                                />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/income_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/income_value"
                            android:textAppearance="@style/income_value"
                            android:textFontWeight="500"
                            android:gravity="top"
                            android:layout_marginTop="5dp"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="right">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="24dp"
                                android:layout_height="24dp"
                                android:src="@drawable/down_arrow"
                                android:rotation="180"/>

                            <TextView
                                android:id="@+id/expenses"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/expenses"
                                android:textAppearance="@style/income"
                                android:gravity="top"
                                android:textFontWeight="600"
                                android:layout_marginLeft="5dp"
                                />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/expenses_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/expenses_value"
                            android:textAppearance="@style/income_value"
                            android:textFontWeight="500"
                            android:gravity="top"
                            android:layout_marginTop="5dp"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>